--- a/style.css
+++ b/style.css
@@ -65,6 +65,9 @@ body {
     list-style: none;
     padding-left: 20px;
 }
+.sidebar li .dropdown {
+    display: none;
+}
 .sidebar li.active .dropdown {
     display: block;
 } 
